[project]
name = "todo-tui"
version = "0.1.0"
description = ""
authors = [
    {name = "kiganoakuma",email = "daltonhberg@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "textual (>=2.1.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
